<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/step1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="18dp"
            android:text="@string/step1" />

        <Button
            android:id="@+id/start_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginLeft="@dimen/start_button_margin"
            android:layout_marginStart="@dimen/start_button_margin"
            android:layout_marginEnd="@dimen/start_button_margin"
            android:layout_marginRight="@dimen/start_button_margin"
            android:text="@string/start_timer"
            />

        <TextView
            android:id="@+id/step2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/general_margin"
            android:textSize="18dp"
            android:text="@string/step2" />

        <Button
            android:id="@+id/step2_timer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:gravity="center"
            android:background="@null"
            android:hint="0:30"
            android:text="@string/step2timer"
            android:inputType="time"
            android:textSize="100dp" />

        <TextView
            android:id="@+id/step3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="18dp"
            android:text="@string/step3" />

        <Button
            android:id="@+id/step3_timer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:gravity="center"
            android:background="@null"
            android:hint="4:00"
            android:text="@string/step3timer"
            android:inputType="time"
            android:textSize="100dp" />


    </LinearLayout>
</layout>